--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <li><strong>Lọc thông tin sản phẩm:</strong> Cho phép khách hàng tìm kiếm sản phẩm dễ dàng bằng cách sử dụng các tiêu chí như danh mục, giá, thương hiệu</li>
         <li><strong>Đăng ký và đăng nhập tài khoản:</strong> Người dùng có thể đăng ký tài khoản mới hoặc đăng nhập vào tài khoản hiện có để thực hiện mua sắm và theo dõi đơn hàng.</li>
         <li><strong>Xây dựng và quản lý giỏ hàng:</strong> Cho phép khách hàng thêm sản phẩm vào giỏ hàng, xem và chỉnh sửa giỏ hàng của họ trước khi thanh toán.</li>
-        <li><strong>Đặt hàng và quản lý đơn hàng:</strong> Người dùng có thể đặt hàng từ giỏ hàng của họ và theo dõi trạng thái của đơn hàng, bao gồm cả việc cập nhật thông tin giao hàng.</li>
-        <li><strong>Phân trang cho trang quản trị:</strong> Quản trị viên có thể quản lý danh sách sản phẩm, quản lý đơn hàng, thêm/sửa/xóa sản phẩm, và xem báo cáo về hoạt động kinh doanh.</li>
+        <li><strong>Đặt hàng và quản lý đơn hàng:</strong> Người dùng có thể đặt hàng từ giỏ hàng của họ và theo dõi trạng thái của đơn hàng.</li>
+        <li><strong>Phân trang cho trang quản trị:</strong> Quản trị viên có thể quản lý danh sách sản phẩm, quản lý đơn hàng, thêm/sửa/xóa sản phẩm.</li>
     </ul>
 
     <p>Quản lý cửa hàng trực tuyến là quá trình quản lý và điều hành các hoạt động kinh doanh trực tuyến để cung cấp trải nghiệm mua sắm thuận tiện và dễ dàng cho khách hàng.</p>
